--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
-    "@mui/icons-material": "^7.0.2",
-    "@mui/material": "^7.0.2",
+    "@mui/icons-material": "^7.1.0",
+    "@mui/material": "^7.1.0",
     "buffer": "^6.0.3",
     "electron-is-dev": "^3.0.1",
     "electron-typescript-ipc": "^3.0.0",
@@ -37,7 +37,7 @@
     "node-carplay": "github:f-io/node-carplay",
     "pcm-player": "^0.0.18",
     "pcm-ringbuf-player": "github:f-io/pcm-ringbuf-player",
-    "react-router-dom": "^7.5.2",
+    "react-router-dom": "^7.6.0",
     "socket.io": "^4.7.2",
     "socket.io-client": "^4.7.2",
     "stream-browserify": "^3.0.0",
@@ -52,13 +52,14 @@
     "@electron/rebuild": "^4.0.1",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@types/events": "^3.0.1",
-    "@types/node": "22.15.3",
-    "@types/react": "^19.1.2",
+    "@types/node": "^22.15.17",
+    "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
-    "@typescript-eslint/eslint-plugin": "^8.31.1",
-    "@typescript-eslint/parser": "^8.31.1",
+    "@typescript-eslint/eslint-plugin": "^8.32.0",
+    "@typescript-eslint/parser": "^8.32.0",
     "@vitejs/plugin-react": "^4.0.4",
-    "electron": "^30.0.1",
+    "@webgpu/types": "^0.1.60",
+    "electron": "^31.7.7",
     "electron-builder": "^26.0.12",
     "electron-vite": "^3.1.0",
     "eslint": "^9.25.1",
@@ -66,7 +67,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "rollup-plugin-polyfill-node": "^0.13.0",
-    "typescript": "^5.1.6",
+    "typescript": "^5.8.3",
     "vite": "^6.3.2"
   }
 }
