--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,12 @@
 {
-  "files": [],
-  "references": [{ "path": "./tsconfig.node.json" }, { "path": "./tsconfig.web.json" }]
+  "compilerOptions": {
+    "lib": [
+      "esnext",
+      "dom",
+      "webgpu"
+    ],
+  },
+  "include": [
+    "src/**/*"
+  ]
 }
