--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -5,8 +5,8 @@ directories:
   buildResources: build
 
 files:
-  - '!**/.vscode/*'
   - '!src/*'
+  - '!**/.vscode/*'
   - '!electron.vite.config.{js,ts,mjs,cjs}'
   - '!{.eslintignore,.eslintrc.cjs,.prettierignore,.prettierrc.yaml,dev-app-update.yml,CHANGELOG.md,README.md}'
   - '!{.env,.env.*,.npmrc,pnpm-lock.yaml}'
@@ -14,6 +14,7 @@ files:
 
 asarUnpack:
   - resources/**
+  - node_modules/usb/**
 
 linux:
   target:
@@ -26,7 +27,7 @@ linux:
 appImage:
   artifactName: ${name}-${version}-${arch}.${ext}
 
-npmRebuild: false
+npmRebuild: true
 
 publish:
   provider: generic
