--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "pi-carplay",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "An Electron application with React and TypeScript",
-  "main": "./out/main/index.js",
+  "main": "./out/main/main.js",
   "author": " Lasse Heitgres",
   "homepage": "https://f-io.dev",
   "scripts": {
@@ -23,9 +23,9 @@
   "dependencies": {
     "@electron-toolkit/preload": "3.0.2",
     "@electron-toolkit/utils": "4.0.0",
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@fontsource/roboto": "^5.0.8",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.2.5",
     "@mui/icons-material": "^7.1.0",
     "@mui/material": "^7.1.0",
     "buffer": "^6.0.3",
@@ -33,17 +33,19 @@
     "electron-typescript-ipc": "^3.0.0",
     "events": "^3.3.0",
     "fft.js": "^4.0.4",
-    "jmuxer": "^2.0.5",
-    "node-carplay": "github:f-io/node-carplay",
+    "jmuxer": "^2.0.7",
+    "lodash.debounce": "^4.0.8",
+    "node-microphone": "github:f-io/node-microphone",
     "pcm-player": "^0.0.18",
     "pcm-ringbuf-player": "github:f-io/pcm-ringbuf-player",
     "react-router-dom": "^7.6.0",
-    "socket.io": "^4.7.2",
-    "socket.io-client": "^4.7.2",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "stream-browserify": "^3.0.0",
     "usb": "^2.15.0",
+    "usb-detection": "^4.14.2",
     "vite-plugin-esmodule": "^1.5.0",
-    "zustand": "^5.0.3"
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@electron-toolkit/eslint-config-prettier": "^3.0.0",
@@ -51,23 +53,25 @@
     "@electron-toolkit/tsconfig": "^1.0.1",
     "@electron/rebuild": "^4.0.1",
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
-    "@types/events": "^3.0.1",
-    "@types/node": "^22.15.17",
-    "@types/react": "^19.1.3",
-    "@types/react-dom": "^19.1.3",
-    "@typescript-eslint/eslint-plugin": "^8.32.0",
-    "@typescript-eslint/parser": "^8.32.0",
-    "@vitejs/plugin-react": "^4.0.4",
+    "@types/events": "^3.0.3",
+    "@types/lodash.debounce": "^4.0.9",
+    "@types/node": "^22.15.20",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
+    "@types/w3c-web-usb": "^1.0.10",
+    "@typescript-eslint/eslint-plugin": "^8.32.1",
+    "@typescript-eslint/parser": "^8.32.1",
+    "@vitejs/plugin-react": "^4.4.1",
     "@webgpu/types": "^0.1.60",
     "electron": "^31.7.7",
     "electron-builder": "^26.0.12",
     "electron-vite": "^3.1.0",
-    "eslint": "^9.25.1",
+    "eslint": "^9.27.0",
     "prettier": "^3.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "rollup-plugin-polyfill-node": "^0.13.0",
     "typescript": "^5.8.3",
-    "vite": "^6.3.2"
+    "vite": "^6.3.5"
   }
 }
