--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -3,7 +3,7 @@
   "include": ["electron.vite.config.*", "src/main/*", "src/preload/*"],
   "compilerOptions": {
     "composite": true,
-    "types": ["electron-vite/node"],
+    "types": ["electron-vite/node", "w3c-web-usb"],
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -15,6 +15,11 @@
     "moduleResolution": "Bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "target": "es2022"
+    "target": "es2022",
+    "baseUrl": "./src",
+    "paths": {
+      "@carplay/*": ["main/carplay/*"],
+      "@carplay/node": ["main/carplay/node"]
+    }
   }
 }
