add AppImage icon

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,8 +2,12 @@
 name: ci
 
 on:
+  push:
+    branches:
+      - dev
   pull_request:
-    branches: [ "main", "dev" ]
+    branches:
+      - main
   workflow_dispatch:
     inputs:
       branch:
