--- a/electron-builder.yml
+++ b/electron-builder.yml
@@ -2,7 +2,7 @@ appId: com.electron.app
 productName: pi-carplay
 
 directories:
-  buildResources: build
+  buildResources: assets
 
 files:
   - '!src/*'
@@ -19,6 +19,7 @@ asarUnpack:
 linux:
   target:
     - AppImage
+  icon: icons/linux/pi-carplay.png   
   maintainer: "Lasse Heitgres <hello@f-io.dev>"
   category: Utility
 
