add AppImage icon

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,5 +1,4 @@
-# .github/workflows/ci.yml
-name: ci
+name: build
 
 on:
   push:
@@ -16,9 +15,9 @@ on:
         default: 'main'
 
 jobs:
-  validate:
+  build_x86_64:
+    name: Build AppImage (x86_64)
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v4
         with:
@@ -44,24 +43,6 @@ jobs:
             dpkg-query -W "$pkg" 2>/dev/null | grep -q "install ok" || sudo apt-get install -y "$pkg"
           done
 
-      - name: Fetch target branches
-        run: |
-          git fetch origin main
-          if git ls-remote --exit-code --heads origin dev; then
-            echo "→ fetching dev"
-            git fetch origin dev
-          else
-            echo "→ skip fetching dev"
-          fi
-
-      - name: Merge-check into PR target (only PRs)
-        if: github.event_name == 'pull_request'
-        run: |
-          BASE=${{ github.event.pull_request.base.ref }}
-          git checkout $BASE && git reset --hard origin/$BASE
-          git checkout ${{ github.head_ref }}
-          git merge $BASE --no-commit --no-ff || { echo "::error::Merge conflicts with $BASE"; exit 1; }
-
       - name: Use Node.js 22.x
         uses: actions/setup-node@v4
         with:
@@ -72,9 +53,9 @@ jobs:
         run: |
           rm -rf node_modules package-lock.json
           npm install
-
+          
       - name: Rebuild native modules for Electron
-        run: npx electron-rebuild -f -w usb-detection
+        run: npx electron-rebuild -f
 
       - name: Type-Check
         run: npm run typecheck
@@ -85,15 +66,51 @@ jobs:
       - name: Create AppImage (x86)
         run: npm run build:linux
 
-      - name: Create AppImage (ARM64)
-        run: npm run build:armLinux
-
       - name: Upload x86 AppImage
         if: success()
         uses: actions/upload-artifact@v4
         with:
           name: pi-carplay-${{ steps.pkg.outputs.version }}-x86_64.AppImage
           path: dist/*-x86_64.AppImage
+
+  build_arm64:
+    name: Build AppImage (ARM64)
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: ${{ github.event.inputs.branch }}
+          
+      - name: Read version from package.json
+        id: pkg
+        run: |
+          VERSION=$(node -p "require('./package.json').version")
+          echo "Version is $VERSION"
+          echo "version=$VERSION" >> $GITHUB_OUTPUT   
+    
+      - name: Run on ARM64
+        uses: uraimo/run-on-arch-action@v2
+        with:
+          arch: aarch64
+          distro: ubuntu22.04
+          run: |
+            apt-get update
+            apt-get install -y curl
+            # Install Node.js 22.x ARM64
+            curl -fsSL https://deb.nodesource.com/setup_22.x | bash -
+            apt-get install -y nodejs
+            node --version
+            npm --version
+            apt-get install -y build-essential python3 python3-dev libusb-1.0-0-dev libudev-dev pkg-config fuse libfuse2 libusb-1.0-0 libudev1
+            npm install
+            npx electron-rebuild -f
+            npm run typecheck
+            npm run build
+            npm run build:armLinux
+            # Move AppImage to workspace so GitHub Action can access it outside the container
+            mkdir -p /github/workspace/dist/
+            cp dist/*-arm64.AppImage /github/workspace/dist/
 
       - name: Upload ARM64 AppImage
         if: success()
