--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "dev": "electron-vite dev",
     "build": "npm run typecheck && electron-vite build",
     "postinstall": "electron-builder install-app-deps",
-    "build:mac": "electron-vite build && electron-builder --mac --config",
+    "build:mac": "electron-vite build && electron-builder --mac --arm64 --config",
     "build:linux": "electron-vite build && electron-builder --linux --config",
     "build:armLinux": "electron-vite build && electron-builder --linux AppImage --arm64 --config"
   },
