--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pi-carplay",
-  "version": "3.2.0",
+  "version": "3.2.1",
   "description": "An Electron application with React and TypeScript",
   "main": "./out/main/main.js",
   "author": " Lasse Heitgres",
@@ -24,9 +24,9 @@
     "@electron-toolkit/utils": "4.0.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@fontsource/roboto": "^5.2.5",
-    "@mui/icons-material": "^7.1.0",
-    "@mui/material": "^7.1.0",
+    "@fontsource/roboto": "^5.2.6",
+    "@mui/icons-material": "^7.1.1",
+    "@mui/material": "^7.1.1",
     "buffer": "^6.0.3",
     "electron-is-dev": "^3.0.1",
     "electron-typescript-ipc": "^3.0.0",
@@ -36,12 +36,11 @@
     "lodash.debounce": "^4.0.8",
     "pcm-player": "^0.0.18",
     "pcm-ringbuf-player": "github:f-io/pcm-ringbuf-player",
-    "react-router-dom": "^7.6.1",
+    "react-router-dom": "^7.6.2",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "stream-browserify": "^3.0.0",
     "usb": "^2.15.0",
-    "usb-detection": "^4.14.2",
     "vite-plugin-esmodule": "^1.5.0",
     "zustand": "^5.0.5"
   },
@@ -52,17 +51,18 @@
     "@esbuild-plugins/node-globals-polyfill": "^0.2.3",
     "@types/events": "^3.0.3",
     "@types/lodash.debounce": "^4.0.9",
-    "@types/react": "^19.1.6",
-    "@types/react-dom": "^19.1.5",
+    "@types/react": "^19.1.7",
+    "@types/react-dom": "^19.1.6",
+    "@types/usb": "^2.0.5",
     "@types/w3c-web-usb": "^1.0.10",
-    "@typescript-eslint/eslint-plugin": "^8.32.1",
-    "@typescript-eslint/parser": "^8.32.1",
-    "@vitejs/plugin-react": "^4.5.0",
+    "@typescript-eslint/eslint-plugin": "^8.34.0",
+    "@typescript-eslint/parser": "^8.34.0",
+    "@vitejs/plugin-react": "^4.5.2",
     "@webgpu/types": "^0.1.61",
     "electron": "^36.4.0",
     "electron-builder": "^26.0.12",
     "electron-vite": "^3.1.0",
-    "eslint": "^9.27.0",
+    "eslint": "^9.28.0",
     "prettier": "^3.5.3",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
