add release function

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -176,6 +176,8 @@ jobs:
       github.event.inputs.create_release == 'true'
     needs: [build_x86_64, build_arm64, build_mac]
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
 
     steps:
       - uses: actions/download-artifact@v4
