--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,16 @@
 name: build
 
+# Trigger
 on:
-  push:
-    branches: [main]
-  pull_request:
-    branches: [main, dev]
+  workflow_run:
+    workflows: ["typecheck"]     
+    branches:   [main, dev]
+    types:      [completed]
+
   workflow_dispatch:
     inputs:
       branch:
-        description: 'Branch to test'
+        description: 'Branch to build'
         required: true
         default: 'main'
       create_release:
@@ -17,11 +19,16 @@ on:
         type: boolean
         default: false
 
+# ────────────────────────────────────────────────────────────────────────────────
 jobs:
+
+# build_x86_64
   build_x86_64:
+    if: ${{ github.event_name == 'workflow_dispatch' ||
+          (github.event_name == 'workflow_run' &&
+          github.event.workflow_run.conclusion == 'success') }}
     name: Build AppImage (x86_64)
     runs-on: ubuntu-latest
-
     outputs:
       version: ${{ steps.pkg.outputs.version }}
 
@@ -29,13 +36,14 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.event.inputs.branch }}
+          ref: ${{ github.event_name == 'workflow_dispatch'
+                    && github.event.inputs.branch
+                    || github.event.workflow_run.head_sha }}
 
       - name: Read version from package.json
         id: pkg
         run: |
           VERSION=$(node -p "require('./package.json').version")
-          echo "Version is $VERSION"
           echo "version=$VERSION" >> "$GITHUB_OUTPUT"
 
       - name: Ensure system packages
@@ -49,45 +57,51 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 22.x
-          cache: 'npm'
+          cache: npm
 
       - name: Clean & install dependencies
         run: |
           rm -rf node_modules package-lock.json
           npm install
 
-      - name: Rebuild native modules for Electron
-        run: npx electron-rebuild -f
+      - run: npx electron-rebuild -f
+        name: Rebuild native modules for Electron
 
-      - name: Type-Check
-        run: npm run typecheck
+      - run: npm run typecheck
+        name: Type-Check (safety net)
 
-      - name: Build Renderer & Main
-        run: npm run build
+      - run: npm run build
+        name: Build Renderer & Main
 
-      - name: Create AppImage (x86)
-        run: npm run build:linux
+      - run: npm run build:linux
+        name: Create AppImage (x86_64)
 
-      - name: Upload x86 AppImage
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
+        name: Upload x86_64 AppImage
         with:
           name: pi-carplay-${{ steps.pkg.outputs.version }}-x86_64.AppImage
           path: dist/*-x86_64.AppImage
+          retention-days: 10
 
+# build_arm64
   build_arm64:
+    if: ${{ github.event_name == 'workflow_dispatch' ||
+          (github.event_name == 'workflow_run' &&
+          github.event.workflow_run.conclusion == 'success') }}
     name: Build AppImage (arm64)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.event.inputs.branch }}
+          ref: ${{ github.event_name == 'workflow_dispatch'
+                    && github.event.inputs.branch
+                    || github.event.workflow_run.head_sha }}
 
       - name: Read version from package.json
         id: pkg
         run: |
           VERSION=$(node -p "require('./package.json').version")
-          echo "Version is $VERSION"
           echo "version=$VERSION" >> "$GITHUB_OUTPUT"
 
       - name: Run on ARM64
@@ -100,8 +114,6 @@ jobs:
             apt-get install -y curl
             curl -fsSL https://deb.nodesource.com/setup_22.x | bash -
             apt-get install -y nodejs
-            node --version
-            npm --version
             apt-get install -y build-essential python3 python3-dev libusb-1.0-0-dev libudev-dev pkg-config fuse libfuse2 libusb-1.0-0 libudev1
             echo "==> Waiting for file system to settle (QEMU workaround)..."
             sleep 5
@@ -113,26 +125,32 @@ jobs:
             mkdir -p /github/workspace/dist/
             cp dist/*-arm64.AppImage /github/workspace/dist/
 
-      - name: Upload ARM64 AppImage
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
+        name: Upload ARM64 AppImage
         with:
-          name: pi-carplay-${{ steps.pkg.outputs.version }}-linux-arm64.AppImage
+          name: pi-carplay-${{ steps.pkg.outputs.version }}-arm64.AppImage
           path: dist/*-arm64.AppImage
+          retention-days: 10
 
+# build_mac
   build_mac:
+    if: ${{ github.event_name == 'workflow_dispatch' ||
+          (github.event_name == 'workflow_run' &&
+          github.event.workflow_run.conclusion == 'success') }}
     name: Build macOS (arm64)
     runs-on: macos-latest
     steps:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.event.inputs.branch }}
+          ref: ${{ github.event_name == 'workflow_dispatch'
+                    && github.event.inputs.branch
+                    || github.event.workflow_run.head_sha }}
 
       - name: Read version from package.json
         id: pkg
         run: |
           VERSION=$(node -p "require('./package.json').version")
-          echo "Version is $VERSION"
           echo "version=$VERSION" >> "$GITHUB_OUTPUT"
 
       - name: Ensure system packages
@@ -145,31 +163,33 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 22.x
-          cache: 'npm'
+          cache: npm
 
       - name: Clean & install dependencies
         run: |
           rm -rf node_modules package-lock.json
           npm install
 
-      - name: Rebuild native modules for Electron
-        run: npx electron-rebuild -f
+      - run: npx electron-rebuild -f
+        name: Rebuild native modules
 
-      - name: Type-Check
-        run: npm run typecheck
+      - run: npm run typecheck
+        name: Type-Check (safety net)
 
-      - name: Build Renderer & Main
-        run: npm run build
+      - run: npm run build
+        name: Build Renderer & Main
 
-      - name: Create macOS App
-        run: npm run build:mac
+      - run: npm run build:mac
+        name: Create macOS App
 
-      - name: Upload macOS App
-        uses: actions/upload-artifact@v4
+      - uses: actions/upload-artifact@v4
+        name: Upload macOS App
         with:
           name: pi-carplay-${{ steps.pkg.outputs.version }}-darwin-arm64.dmg
           path: dist/*arm64.dmg
+          retention-days: 10
 
+# draft_release
   draft_release:
     if: >
       github.event_name == 'workflow_dispatch' &&
@@ -178,7 +198,6 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
-
     steps:
       - uses: actions/download-artifact@v4
         with:
@@ -196,3 +215,18 @@ jobs:
             release-assets/**/*
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
+# cleanup  (10 days, min. 5 Builds)
+  cleanup_old_runs:
+    if: ${{ github.event_name == 'workflow_dispatch' ||
+            (github.event_name == 'workflow_run' &&
+             github.event.workflow_run.conclusion == 'success') }}
+    needs: [build_x86_64, build_arm64, build_mac]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: Mattraks/delete-workflow-runs@v2
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
+          retain_days:      10
+          keep_minimum_runs: 5
