--- a/tsconfig.web.json
+++ b/tsconfig.web.json
@@ -9,20 +9,20 @@
   "compilerOptions": {
     "composite": false,
     "jsx": "react-jsx",
-    "target": "es2022",
-    "lib": ["dom", "dom.iterable", "esnext", "WebWorker"],
-    "types": ["@webgpu/types", "w3c-web-usb"],
+    "target": "es2024",
+    "module": "es2022",
+    "lib": ["dom", "dom.iterable", "es2024", "webworker"],
+    "types": ["@webgpu/types", "w3c-web-usb", "vite/client"],
     "allowJs": true,
-    "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "forceConsistentCasingInFileNames": true,
-    "noFallthroughCasesInSwitch": true,
-    "module": "esnext",
-    "moduleResolution": "Bundler",
+    "moduleResolution": "bundler",
+    "skipLibCheck": true,
     "resolveJsonModule": true,
     "isolatedModules": true,
+    "noFallthroughCasesInSwitch": true,
     "noEmit": true,
     "baseUrl": "./src",
     "paths": {
